# fullstack-fastapi-app

./: pyproject.toml
alembic/: env.py
alembic/versions/: 6d2eea74bd91_initial_migration.py
app/: main.py
app/database/: database.py
app/models/: models.py
app/routers/: admin.py  auth.py  todos.py  users.py
app/schemas/: schemas.py
app/static/js/: base.js
app/templates/: layout.html  login.html  register.html  todos.html
test/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py  utils.py
